Rename UserRole.userId -> username
In the new user administration module, we separate between username and
user ID:
- Username is the user's Cognito username, which is human-readable and
  chosen by the administrator
- User ID is a Cognito-generated user ID, typically a UUID

Cognito's API is based on usernames, so that's also what we use in our
new user administration API.

Previously, our UserRole entity had a userId field, but that was
actually the Cognito username, not the Cognito user ID. To avoid
confusion, we have therefore decided to rename userId -> username on our
UserRole entity. All affected environments are being migrated.
